finish search by category and search on filtered product, also finish all controller test